# aether-latex

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AIAssistantPanel.tsx  CodeEditor.tsx  EditorSidebar.tsx  EditorToolbar.tsx  PDFPreview.tsx
src/hooks/: useTauri.ts
src/pages/: Index.tsx
